# crewai-custom-tools

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  cassini.html  mkdocs.yml  osv-scanner.toml  pyproject.toml  sbom.json
.cache/: cache_62150b7a0941be8b9346c23898399bf3.json
.playwright-mcp/: page-2026-07-16T15-41-59-549Z.yml
.serena/: project.yml
docs/: ADR-0001-architecture-and-design.md  PRD.md  USER_GUIDE.md  index.md
scripts/: build_prenoms_sexe.py  build_us_gazetteer.py  capturer_charges_referentiel.py  extract_changelog.py  generate_sbom.py
tests/: __init__.py  test_analytics_aplus_scoring.py  test_analytics_aplus_screening.py  test_analytics_compliance.py  test_analytics_etf.py  test_analytics_grading.py  test_analytics_sizing_targets.py  test_analytics_valuation.py  test_build_prenoms_sexe.py  test_build_us_gazetteer.py  test_cache.py  test_decorators.py  test_enterprise_tools.py  test_exports.py  test_extract_changelog.py  test_file_tools.py  test_finance_analytics.py  test_finance_extras.py  test_finance_indicators.py  test_finance_tools.py  test_genealogy_analysis_tools.py  test_genealogy_blocking.py  test_genealogy_corrections.py  test_genealogy_create_person_event_tools.py  test_genealogy_deces_scoring.py  test_genealogy_domain.py  test_genealogy_duplicates.py  test_genealogy_external_apis.py  test_genealogy_facts.py  test_genealogy_gender.py  test_genealogy_geo_france.py  test_genealogy_geo_france_ex_communes.py  test_genealogy_geo_nominatim.py  test_genealogy_geo_registry.py  test_genealogy_geo_suisse.py  test_genealogy_geo_transitions.py  (+36 more)
(+153 files in other folders)
