[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crew-custom-tools"
version = "0.1.0"
description = "Centralized, resilient tools for CrewAI multi-agent systems"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "crewai>=0.100.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
finance = [
    "yfinance>=0.2.38",
]
dev = [
    "pytest-mock>=3.15.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/crew_custom_tools"]
